ysl: Add config_wallpaperMaxScale
- This is for Fixing Lagging if Scroll to Menu Application and QS Scroll Down.

Signed-off-by: anandhan07 <anandhasayanan007jb@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -365,4 +365,7 @@
          rotations as the default behavior. -->
     <bool name="config_allowAllRotations">true</bool>
 
+    <!-- The max scale for the wallpaper when it's zoomed in -->
+    <item name="config_wallpaperMaxScale" format="float" type="dimen">1</item>
+
 </resources>
