ysl: Enable `config statusbar lyric`
Signed-off-by: Rahmad Adi Pratama <OhMyVenyx@proton.me>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -698,4 +698,7 @@
          As of Honeycomb, blurring is not supported anymore. -->
     <bool name="config_sf_slowBlur">false</bool>
 
+    <!-- Qassa Music Lyrics -->
+    <bool name="config_enable_statusbar_lyric">true</bool>
+
 </resources>
