ysl: overlay: Make the UI smoother
Signed-off-by: ALprjkt <coknjaranwe@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -359,4 +359,9 @@
     <!-- Whether a software navigation bar should be shown. NOTE: in the future this may be
          autodetected from the Configuration. -->
      <bool name="config_showNavigationBar">true</bool>
+
+    <!-- Enables or disables fading edges when marquee is enabled in TextView.
+        Off by default, since the framebuffer readback used to implement the
+        fading edges is prohibitively expensive on most GPUs. -->
+   <bool name="config_ui_enableFadingMarquee">true</bool>
 </resources>
