--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -192,12 +192,9 @@
         <item>"/system/framework/services.jar"</item>
         <item>"/apex/com.android.art/javalib/core-oj.jar"</item>
         <item>"/apex/com.android.art/javalib/core-libart.jar"</item>
-        <item>"/system_ext/priv-app/SystemUI/SystemUI.apk"</item>
+        <item>"/system/system_ext/priv-app/SystemUI/SystemUI.apk"</item>
         <item>"/system/bin/surfaceflinger"</item>
     </string-array>
-
-    <!-- Should the pinner service pin the Home application? -->
-    <bool name="config_pinnerHomeApp">true</bool>
 
     <!-- Flag indicating whether we should enable smart battery. -->
     <bool name="config_smart_battery_available">true</bool>
@@ -231,7 +228,6 @@
         <item>0:2:15</item> <!-- ID0:Fingerprint:Strong -->
     </string-array>
     
-    resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Stability requirements in milliseconds for accepting a new brightness level.  This is used
          for debouncing the light sensor.  Different constants are used to debounce the light sensor
          when adapting to brighter or darker environments.  This parameter controls how quickly
@@ -361,4 +357,62 @@
         Off by default, since the framebuffer readback used to implement the
         fading edges is prohibitively expensive on most GPUs. -->
    <bool name="config_ui_enableFadingMarquee">true</bool>
+
+    <!-- Whether the new Auto Selection Network UI should be shown -->
+    <bool name="config_enableNewAutoSelectNetworkUI">true</bool>
+
+    <!-- If true, the screen can be rotated via the accelerometer in all 4
+         rotations as the default behavior. -->
+    <bool name="config_allowAllRotations">true</bool>
+
+    <!-- The max scale for the wallpaper when it's zoomed in -->
+    <item name="config_wallpaperMaxScale" format="float" type="dimen">1</item>
+
+    <!-- List of system apps that are allowed to be locked with app lock.
+     Use with extreme caution. -->
+    <string-array name="config_appLockAllowedSystemApps" translatable="false">
+        <item>com.google.android.GoogleCamera</item>
+        <item>app.grapheneos.camera</item>
+        <item>com.google.android.documentsui</item>
+        <item>com.android.vending</item>
+        <item>com.google.android.apps.photos</item>
+        <item>com.google.android.gm</item>
+        <item>com.google.android.youtube</item>
+        <item>com.android.chrome</item>
+        <item>com.google.android.googlequicksearchbox</item>
+        <item>com.google.android.apps.maps</item>
+        <item>com.google.android.apps.cameralite</item>
+        <item>com.google.android.contacts</item>
+        <item>com.android.contacts</item>
+        <item>com.google.android.apps.nbu.files</item>
+        <item>com.google.android.apps.docs</item>
+        <item>com.google.android.dialer</item>
+        <item>com.android.dialer</item>
+        <item>com.google.android.apps.messaging</item>
+        <item>com.android.messaging</item>
+        <item>com.google.android.keep</item>
+        <item>com.google.android.apps.photosgo</item>
+        <item>com.google.android.apps.photos</item>
+        <item>com.google.android.apps.editors.docs</item>
+        <item>com.google.android.apps.tachyon</item>
+        <item>com.google.android.apps.recorder</item>
+        <item>com.android.settings</item>
+        <item>com.android.fmradio</item>
+        <item>com.android.calculator</item>
+        <item>com.android.calculator2</item>
+        <item>com.android.deskclock</item>
+        <item>com.android.documentsui</item>
+        <item>com.android.gallery3d</item>
+        <item>com.google.android.calendar</item>
+        <item>com.google.android.messaging</item>
+        <item>com.google.android.youtube</item>
+        <item>com.pittvandewitt.viperfx</item>
+        <item>io.chaldeaprjkt.gamespace</item>
+        <item>org.lineageos.aperture</item>
+        <item>org.lineageos.eleven</item>
+        <item>org.lineageos.etar</item>
+        <item>org.lineageos.jelly</item>
+        <item>org.lineageos.recorder</item>
+    </string-array>
+
 </resources>
